changed payment part

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "YugTech",
-  "short_name": "YugTech",
+  "name": "Online Shopping Store",
+  "short_name": "Online Shopping Store",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
