--- a/backend/package.json
+++ b/backend/package.json
@@ -26,7 +26,7 @@
     "googleapis": "^150.0.1",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.12.1",
+    "mongoose": "^8.18.1",
     "multer": "^1.4.5-lts.2",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.10.0",
@@ -39,6 +39,7 @@
     "qrcode": "^1.5.4",
     "sharp": "^0.34.1",
     "socket.io": "^4.8.1",
+    "stripe": "^18.5.0",
     "tailwindcss": "^4.0.15",
     "url": "^0.11.4",
     "uuid": "^11.1.0"
